# oak-agent

./: .cruft.json  .gitignore  404.html  Makefile  README.md  aurelian.agents.checklist.html  aurelian.agents.html  aurelian.agents.robot_ontology_agent_assets.html  aurelian.dependencies.html  aurelian.html  aurelian.tools.html  aurelian.utils.html  genindex.html  index.html  mkdocs.yml  modules.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: deploy-docs.yml  qc.yml
_sources/: aurelian.agents.checklist.rst.txt  aurelian.agents.robot_ontology_agent_assets.rst.txt  aurelian.agents.rst.txt  aurelian.dependencies.rst.txt  aurelian.rst.txt  aurelian.tools.rst.txt  aurelian.utils.rst.txt  modules.rst.txt
agents/amigo_agent/: index.html
agents/biblio_agent/: index.html
agents/checklist_agent/: index.html
agents/chemistry_agent/: index.html
agents/d4d_agent/: index.html
agents/diagnosis_agent/: index.html
agents/gocam_agent/: index.html
agents/linkml_agent/: index.html
agents/monarch_agent/: index.html
agents/ontology_mapper_agent/: index.html
agents/phenopacket_agent/: index.html
agents/rag_agent/: index.html
agents/ubergraph_agent/: index.html
agents/uniprot_agent/: index.html
cli/: index.html
docs/: cli.md  conf.py  index.md  index.rst  mcp.md
docs/agents/: amigo_agent.md  biblio_agent.md  checklist_agent.md  chemistry_agent.md  d4d_agent.md  diagnosis_agent.md  gocam_agent.md  linkml_agent.md  monarch_agent.md  ontology_mapper_agent.md  phenopacket_agent.md  rag_agent.md  relation_extraction_agent.md  scientific_knowledge_extraction_agent.md  ubergraph_agent.md  uniprot_agent.md
docs/examples/: Terpenoids.ipynb
examples/Terpenoids/: index.html
mcp/: index.html
scripts/: gen_ref_pages.py
search/: search_index.json
src/aurelian/: __init__.py  chat.py  cli.py
src/aurelian/agents/: __init__.py  amigo_agent.py  biblio_agent.py  checklist_agent.py  chemistry_agent.py  d4d_agent.py  diagnosis_agent.py  gocam_agent.py  linkml_agent.py  monarch_agent.py  ontology_mapper_agent.py  phenopacket_agent.py  rag_agent.py  robot_ontology_agent.py  ubergraph_agent.py  uniprot_agent.py
src/aurelian/agents/amigo/: amigo_config.py  amigo_gradio.py  amigo_tools.py
src/aurelian/agents/biblio/: biblio_gradio.py
src/aurelian/agents/checklist/: __init__.py  (+1 more)
src/aurelian/dependencies/: workdir.py
src/aurelian/mcp/: amigo_mcp_test.py  config_generator.py  example_config.json  gocam_mcp_test.py  linkml_mcp_tools.py  phenopackets_mcp_test.py
src/aurelian/utils/: data_utils.py  doi_fetcher.py  ontology_utils.py  pubmed_utils.py  pytest_report_to_markdown.py  search_utils.py
src/oak_agent/: chat.py  cli.py
src/oak_agent/agents/: amigo_agent.py  checklist_agent.py  gocam_agent.py  linkml_agent.py  phenopacket_agent.py  ubergraph_agent.py  uniprot_agent.py
src/oak_agent/utils/: async_utils.py  data_utils.py  doi_fetcher.py  pubmed_utils.py  search_utils.py
tests/: __init__.py  conftest.py  test_cli_commands.py  test_cli_config.py  test_cli_imports.py
tests/data/pdfs/: .gitignore
tests/input/robot_test/: imports.csv
tests/output/robot_test/: imports.owl  snacks.csv  test_output.owl
tests/test_agents/: test_amigo_agent.py  test_chemistry_agent.py  test_diagnosis_agent.py  test_gocam_agent.py  test_linkml_agent.py  test_literature_agent.py  test_monarch_agent.py  test_ontology_mapper_agent.py  test_phenopacket_agent.py  test_relation_extraction_agent.py  test_robot_ontology_agent.py  test_scientific_knowledge_extraction_agent.py  test_ubergraph_agent.py  test_uniprot_agent.py
tests/test_agents/test_scientific_knowledge_extraction/: __init__.py  test_extraction.py
tests/test_utils/: test_ontology_utils.py  test_robot_ontology_utils.py
(+37 files in other folders)
